# uprintf

./: CDC.md  CMakeLists.txt  LICENSE  Makefile  README.md  clib.json  conanfile.py  todolist.md
examples/: basic.c
include/: uprintf.h  uprintf_color.h  uprintf_config.h
src/: uprintf.c
tests/: test_color.c  test_narrow.c  test_security.c  test_snprintf.c  test_wide.c
